--- a/Locales/langs/en.yml
+++ b/Locales/langs/en.yml
@@ -148,7 +148,7 @@ play_10 : "<b>Title :</b> {0}\n<b>Duration :</b> {1} minutes"
 play_11 : "<u><b>{0} Spotify Player</b></u>\n\n<b>Requested by :</b> {1}"
 play_12 : "<u><b>{0} Apple Player</b></u>\n\n<b>Requested by :</b> {1}"
 play_13 : "- Live Stream detected\n\nAre you sure that you want to play this live stream?"
-play_14 : "Failed to fetch track details\n\nTry playing some other"
+play_14 : "Youtube API error!\nKindly stream your favourite songs using Spotify links for now; The error will soon be fixed\n\nHow to play from Spotify?\n→ /play (track/playlist link from spotify)"
 play_15 : "Failed to process query.\n\nCurrently I am only set to play youtube playlists and telegram audios/videos."
 play_16 : "No active VCs\n\nTo use forceplay, there must be an active VC"
 play_17 : "Please turn the VC on first, I'm unable to perform streaming."
